--- a/package.json
+++ b/package.json
@@ -16,5 +16,15 @@
   "bugs": {
     "url": "https://github.com/JasonSoft-Net/jasonsoft-koa-server/issues"
   },
-  "homepage": "https://github.com/JasonSoft-Net/jasonsoft-koa-server#readme"
+  "homepage": "https://github.com/JasonSoft-Net/jasonsoft-koa-server#readme",
+  "dependencies": {
+    "@babel/register": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
+    "koa": "^2.13.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11"
+  }
 }
