--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "jasonsoft-koa-server",
   "version": "1.0.0",
-  "description": "Koa server example",
+  "description": "Node.js Web API with Koa, Koa server example",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node bin/start.js",
+    "lint": "eslint . --ext .js",
+    "autofix": "eslint . --ext .js --fix"
   },
   "repository": {
     "type": "git",
@@ -12,7 +14,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/JasonSoft-Net/jasonsoft-koa-server/issues"
   },
@@ -25,6 +27,9 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11"
+    "@babel/preset-env": "^7.12.11",
+    "eslint": "^7.19.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
   }
 }
