--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js Web API with Koa, Koa server example",
   "main": "index.js",
   "scripts": {
-    "dev": "node bin/start.js",
+    "dev": "nodemon bin/start.js",
     "lint": "eslint . --ext .js",
     "autofix": "eslint . --ext .js --fix"
   },
@@ -30,6 +30,7 @@
     "@babel/preset-env": "^7.12.11",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "^2.22.1",
+    "nodemon": "^2.0.7"
   }
 }
